frontend/src/app/modules/main-page/components/left-side-menu/left-side-menu.component.sass
@import 'src/styles.sass'
  
.leftside-menu
  grid-column: 1
  grid-row: 1
  width: 100%
  height: 100%
  padding: 10px
  border-right: 1px solid $borders
  .logo
    width: 100%
    height: $logo-height
    color: $primary
    font-size: 45px
    font-weight: bold
    padding: 25px 0px 0px 20px
    cursor: pointer
  .menu
    border-bottom: 1px solid $borders
    height:  190px
    .menu-item
      display: grid
      grid-template-columns: max-content auto
      align-content: center
      align-items: center
      color: $text-common
      font-size: 1.1rem
      font-weight: 600
      padding: 10px 12px 10px 22px
      span
        padding-left: 7px
      &:hover
        color: $primary
  .my-tracks
    margin-top: 10px
    .create-track-button
      text-align: center
      padding: 5px 5px 10px 5px
      button
        width: 70%
        border-radius: 15px
        background: $primary !important
    p
      color: $text-common
      font-size: 1.1rem
      font-weight: 600
      padding: 7px 10px 2px 20px
    .track-list
      padding: 0px 5px 5px 20px
      a
        display: block
        color: $text-common
        padding: 5px 0px 5px 7px
        &:hover
          color: $primary

